Add web storage and JSON import/export functionality
1. Integrated localStorage for persistent quote storage
2. Added sessionStorage for last viewed quote
3. Implemented JSON export with download functionality
4. Added JSON import with file validation
5. Enhanced error handling and user feedback
6. Added keyboard shortcuts for export
7. Updated UI with storage information
8. Improved documentation in README

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -93,6 +93,16 @@
       border: 1px solid #ddd;
       margin: 0 10px;
     }
+    
+    .storage-info {
+      text-align: center;
+      margin: 15px 0;
+    }
+    
+    .storage-info p {
+      color: #666;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -112,6 +122,10 @@
   <div class="button-container">
     <button id="newQuote">Show New Quote</button>
     <button id="toggleForm">Add New Quote</button>
+  </div>
+  
+  <div class="storage-info">
+    <p><small><strong>Note:</strong> Your quotes are automatically saved locally and will persist between browser sessions.</small></p>
   </div>
   
   <script src="script.js"></script>
