--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -128,6 +128,14 @@
     <p><small><strong>Note:</strong> Your quotes are automatically saved locally and will persist between browser sessions.</small></p>
   </div>
   
+  <div class="form-container">
+    <h3 style="text-align: center; margin-bottom: 20px; color: #333;">Import/Export Quotes</h3>
+    <button id="exportQuotes" style="width: 100%; margin-bottom: 10px; background-color: #28a745;">Export Quotes</button>
+    <label for="importFile" style="display: block; margin-bottom: 10px; font-weight: bold;">Import Quotes from JSON file:</label>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" style="width: 100%; padding: 10px; border: 2px dashed #007bff; border-radius: 5px; background-color: #f8f9fa;" />
+    <p style="color: #666; margin-top: 15px; font-size: 0.9em;"><small><strong>Note:</strong> Import will add quotes to your existing collection. Export saves all current quotes to a JSON file.</small></p>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
